--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     </head>
     <body>
     <form action="submit.php" method="POST" id="form-style">
+        <div class="header-container">
+            <h1>EduZone School Visits</h1><br>
+            <img src="assets/AEE_Logo - Single Blue.png" alt="AEE Logo"><br><br>
+        </div>
+        
         <!-- Hidden field to store the selected school ID -->
         <input type="hidden" name="school-id" id="school-id">
 
@@ -77,6 +82,5 @@
         <button type="submit">Submit</button>
 
         </form>
-
     </body>
 </html>
